--- a/TempConv/src/index.css
+++ b/TempConv/src/index.css
@@ -12,3 +12,15 @@ a {
 	text-decoration: none;
 	color: blue;
 }
+h1, h2 {
+	margin: 0;
+}
+
+div#main {
+	display: flex;
+	margin: 20px;
+}
+
+div#product {
+	margin-left: 40px;
+}
